--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -4,13 +4,13 @@
   contents:
     - title: Ph.D. in Computer Science and Engineering
       institution: Hong Kong University of Science and Technology, Hong Kong
-      year: 2022
+      year: 2018 - 2022
       description:
         - "Advisor: Prof. <a href='https://www.cse.ust.hk/~jamesk/'>James T. Kwok</a>"
         - "Thesis: Neural Architecture Design: Search Methods and Domain Knowledge"
     - title: B.S. in Electronic Engineering 
       institution: Tsinghua University, Beijing, China
-      year: 2018
+      year: 2014 - 2018
       description: 
         - Advised by Prof. <a href='https://fi.ee.tsinghua.edu.cn/~liyong/'>Yong Li</a>
 
